--- a/Classes/SideViewController.xib
+++ b/Classes/SideViewController.xib
@@ -126,7 +126,7 @@
 						<string key="NSFrame">{{23, 333}, {115, 73}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="76694792"/>
+						<reference key="NSNextKeyView" ref="563344667"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -149,7 +149,6 @@
 						<string key="NSFrame">{{72, 457}, {18, 19}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="563344667"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -169,7 +168,7 @@
 					<object class="IBUIImageView" id="788174425">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{197, 51}, {103, 103}}</string>
+						<string key="NSFrame">{{193, 51}, {103, 103}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="905962942"/>
@@ -185,10 +184,10 @@
 					<object class="IBUITextView" id="563344667">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{180, 162}, {137, 229}}</string>
+						<string key="NSFrame">{{169, 162}, {151, 279}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSNextKeyView" ref="76694792"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -199,7 +198,8 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<bool key="IBUIEditable">NO</bool>
 						<string type="base64-UTF8" key="IBUIText">Q3JlYXRlZCAmIE1hbmFnZWQgYnk6Cgpyb2NrODgKYW5nZWxYd2luZAppbmI0b2hub2VzCm1hY3p5ZGVj
-bwpXTVMKClVzZXM6CgpuZHM0ZHJvaWQKRGVTbXVNRQpNTURyYXdlckNvbnRyb2xsZXI</string>
+bwpXLk1TCuKAqHJpbGV5dGVzdHV0CgpVc2VzOgoKbmRzNGRyb2lkCkRlU211TUUKTU1EcmF3ZXJDb250
+cm9sbGVyA</string>
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MC42NjY2NjY2NjY3AA</bytes>
@@ -405,38 +405,6 @@ bwpXTVMKClVzZXM6CgpuZHM0ZHJvaWQKRGVTbXVNRQpNTURyYXdlckNvbnRyb2xsZXI</string>
 								<float key="scoringTypeFloat">24</float>
 								<int key="contentType">2</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="358308179">
-								<reference key="firstItem" ref="563344667"/>
-								<int key="firstAttribute">9</int>
-								<int key="relation">0</int>
-								<reference key="secondItem" ref="788174425"/>
-								<int key="secondAttribute">9</int>
-								<float key="multiplier">1</float>
-								<object class="IBLayoutConstant" key="constant">
-									<double key="value">0.0</double>
-								</object>
-								<float key="priority">1000</float>
-								<reference key="containingView" ref="191373211"/>
-								<int key="scoringType">6</int>
-								<float key="scoringTypeFloat">24</float>
-								<int key="contentType">2</int>
-							</object>
-							<object class="IBNSLayoutConstraint" id="453889039">
-								<reference key="firstItem" ref="563344667"/>
-								<int key="firstAttribute">3</int>
-								<int key="relation">0</int>
-								<reference key="secondItem" ref="788174425"/>
-								<int key="secondAttribute">4</int>
-								<float key="multiplier">1</float>
-								<object class="IBNSLayoutSymbolicConstant" key="constant">
-									<double key="value">8</double>
-								</object>
-								<float key="priority">1000</float>
-								<reference key="containingView" ref="191373211"/>
-								<int key="scoringType">6</int>
-								<float key="scoringTypeFloat">24</float>
-								<int key="contentType">3</int>
-							</object>
 							<object class="IBNSLayoutConstraint" id="821560688">
 								<reference key="firstItem" ref="905962942"/>
 								<int key="firstAttribute">3</int>
@@ -469,6 +437,70 @@ bwpXTVMKClVzZXM6CgpuZHM0ZHJvaWQKRGVTbXVNRQpNTURyYXdlckNvbnRyb2xsZXI</string>
 								<float key="scoringTypeFloat">24</float>
 								<int key="contentType">2</int>
 							</object>
+							<object class="IBNSLayoutConstraint" id="81534544">
+								<reference key="firstItem" ref="563344667"/>
+								<int key="firstAttribute">6</int>
+								<int key="relation">0</int>
+								<reference key="secondItem" ref="191373211"/>
+								<int key="secondAttribute">6</int>
+								<float key="multiplier">1</float>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">0.0</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="191373211"/>
+								<int key="scoringType">8</int>
+								<float key="scoringTypeFloat">29</float>
+								<int key="contentType">3</int>
+							</object>
+							<object class="IBNSLayoutConstraint" id="453889039">
+								<reference key="firstItem" ref="563344667"/>
+								<int key="firstAttribute">3</int>
+								<int key="relation">0</int>
+								<reference key="secondItem" ref="788174425"/>
+								<int key="secondAttribute">4</int>
+								<float key="multiplier">1</float>
+								<object class="IBNSLayoutSymbolicConstant" key="constant">
+									<double key="value">8</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="191373211"/>
+								<int key="scoringType">6</int>
+								<float key="scoringTypeFloat">24</float>
+								<int key="contentType">3</int>
+							</object>
+							<object class="IBNSLayoutConstraint" id="588404506">
+								<reference key="firstItem" ref="191373211"/>
+								<int key="firstAttribute">6</int>
+								<int key="relation">0</int>
+								<reference key="secondItem" ref="788174425"/>
+								<int key="secondAttribute">6</int>
+								<float key="multiplier">1</float>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">24</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="191373211"/>
+								<int key="scoringType">3</int>
+								<float key="scoringTypeFloat">9</float>
+								<int key="contentType">3</int>
+							</object>
+							<object class="IBNSLayoutConstraint" id="358308179">
+								<reference key="firstItem" ref="788174425"/>
+								<int key="firstAttribute">9</int>
+								<int key="relation">0</int>
+								<reference key="secondItem" ref="563344667"/>
+								<int key="secondAttribute">9</int>
+								<float key="multiplier">1</float>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">0.0</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="191373211"/>
+								<int key="scoringType">6</int>
+								<float key="scoringTypeFloat">24</float>
+								<int key="contentType">2</int>
+							</object>
 							<object class="IBNSLayoutConstraint" id="400786873">
 								<reference key="firstItem" ref="788174425"/>
 								<int key="firstAttribute">3</int>
@@ -483,22 +515,6 @@ bwpXTVMKClVzZXM6CgpuZHM0ZHJvaWQKRGVTbXVNRQpNTURyYXdlckNvbnRyb2xsZXI</string>
 								<reference key="containingView" ref="191373211"/>
 								<int key="scoringType">3</int>
 								<float key="scoringTypeFloat">9</float>
-								<int key="contentType">3</int>
-							</object>
-							<object class="IBNSLayoutConstraint" id="327559202">
-								<reference key="firstItem" ref="788174425"/>
-								<int key="firstAttribute">5</int>
-								<int key="relation">0</int>
-								<reference key="secondItem" ref="191373211"/>
-								<int key="secondAttribute">5</int>
-								<float key="multiplier">1</float>
-								<object class="IBLayoutConstant" key="constant">
-									<double key="value">197</double>
-								</object>
-								<float key="priority">1000</float>
-								<reference key="containingView" ref="191373211"/>
-								<int key="scoringType">9</int>
-								<float key="scoringTypeFloat">40</float>
 								<int key="contentType">3</int>
 							</object>
 							<object class="IBNSLayoutConstraint" id="1060676808">
@@ -585,9 +601,9 @@ bwpXTVMKClVzZXM6CgpuZHM0ZHJvaWQKRGVTbXVNRQpNTURyYXdlckNvbnRyb2xsZXI</string>
 							<reference ref="519331600"/>
 							<reference ref="905962942"/>
 							<reference ref="325667712"/>
+							<reference ref="563344667"/>
 							<reference ref="788174425"/>
 							<reference ref="76694792"/>
-							<reference ref="563344667"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -818,7 +834,7 @@ bwpXTVMKClVzZXM6CgpuZHM0ZHJvaWQKRGVTbXVNRQpNTURyYXdlckNvbnRyb2xsZXI</string>
 						<int key="objectID">149</int>
 						<reference key="object" ref="563344667"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="537988476">
+							<object class="IBNSLayoutConstraint" id="1036067676">
 								<reference key="firstItem" ref="563344667"/>
 								<int key="firstAttribute">8</int>
 								<int key="relation">0</int>
@@ -826,23 +842,7 @@ bwpXTVMKClVzZXM6CgpuZHM0ZHJvaWQKRGVTbXVNRQpNTURyYXdlckNvbnRyb2xsZXI</string>
 								<int key="secondAttribute">0</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
-									<double key="value">229</double>
-								</object>
-								<float key="priority">1000</float>
-								<reference key="containingView" ref="563344667"/>
-								<int key="scoringType">3</int>
-								<float key="scoringTypeFloat">9</float>
-								<int key="contentType">1</int>
-							</object>
-							<object class="IBNSLayoutConstraint" id="445379624">
-								<reference key="firstItem" ref="563344667"/>
-								<int key="firstAttribute">7</int>
-								<int key="relation">0</int>
-								<nil key="secondItem"/>
-								<int key="secondAttribute">0</int>
-								<float key="multiplier">1</float>
-								<object class="IBLayoutConstant" key="constant">
-									<double key="value">137</double>
+									<double key="value">279</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="563344667"/>
@@ -856,11 +856,6 @@ bwpXTVMKClVzZXM6CgpuZHM0ZHJvaWQKRGVTbXVNRQpNTURyYXdlckNvbnRyb2xsZXI</string>
 					<object class="IBObjectRecord">
 						<int key="objectID">158</int>
 						<reference key="object" ref="453889039"/>
-						<reference key="parent" ref="191373211"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">175</int>
-						<reference key="object" ref="327559202"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -879,24 +874,29 @@ bwpXTVMKClVzZXM6CgpuZHM0ZHJvaWQKRGVTbXVNRQpNTURyYXdlckNvbnRyb2xsZXI</string>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">205</int>
-						<reference key="object" ref="445379624"/>
-						<reference key="parent" ref="563344667"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">207</int>
 						<reference key="object" ref="788619232"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">215</int>
+						<int key="objectID">218</int>
+						<reference key="object" ref="1036067676"/>
+						<reference key="parent" ref="563344667"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">220</int>
+						<reference key="object" ref="81534544"/>
+						<reference key="parent" ref="191373211"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">221</int>
 						<reference key="object" ref="358308179"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">216</int>
-						<reference key="object" ref="537988476"/>
-						<reference key="parent" ref="563344667"/>
+						<int key="objectID">222</int>
+						<reference key="object" ref="588404506"/>
+						<reference key="parent" ref="191373211"/>
 					</object>
 				</array>
 			</object>
@@ -912,12 +912,13 @@ bwpXTVMKClVzZXM6CgpuZHM0ZHJvaWQKRGVTbXVNRQpNTURyYXdlckNvbnRyb2xsZXI</string>
 					<reference ref="499015736"/>
 					<reference ref="302300066"/>
 					<reference ref="1060676808"/>
-					<reference ref="327559202"/>
 					<reference ref="400786873"/>
+					<reference ref="358308179"/>
+					<reference ref="588404506"/>
+					<reference ref="453889039"/>
+					<reference ref="81534544"/>
 					<reference ref="613329140"/>
 					<reference ref="821560688"/>
-					<reference ref="453889039"/>
-					<reference ref="358308179"/>
 					<reference ref="1044751090"/>
 					<reference ref="894636549"/>
 					<reference ref="1065360423"/>
@@ -939,8 +940,7 @@ bwpXTVMKClVzZXM6CgpuZHM0ZHJvaWQKRGVTbXVNRQpNTURyYXdlckNvbnRyb2xsZXI</string>
 				<string key="143.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="149.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<array class="NSMutableArray" key="149.IBViewMetadataConstraints">
-					<reference ref="445379624"/>
-					<reference ref="537988476"/>
+					<reference ref="1036067676"/>
 				</array>
 				<boolean value="NO" key="149.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -950,14 +950,14 @@ bwpXTVMKClVzZXM6CgpuZHM0ZHJvaWQKRGVTbXVNRQpNTURyYXdlckNvbnRyb2xsZXI</string>
 				<boolean value="NO" key="15.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="158.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="16.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="175.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="185.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="200.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="202.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="205.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="207.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="215.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="216.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="218.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="220.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="221.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="222.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="29.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="33.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<array class="NSMutableArray" key="33.IBViewMetadataConstraints">
@@ -988,7 +988,7 @@ bwpXTVMKClVzZXM6CgpuZHM0ZHJvaWQKRGVTbXVNRQpNTURyYXdlckNvbnRyb2xsZXI</string>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">216</int>
+			<int key="maxID">222</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1003,6 +1003,17 @@ bwpXTVMKClVzZXM6CgpuZHM0ZHJvaWQKRGVTbXVNRQpNTURyYXdlckNvbnRyb2xsZXI</string>
 				<object class="IBPartialClassDescription">
 					<string key="className">SideViewController</string>
 					<string key="superclassName">UIViewController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">currentGame:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">currentGame:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">currentGame:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
 					<object class="NSMutableDictionary" key="outlets">
 						<string key="NS.key.0">creditsButton</string>
 						<string key="NS.object.0">UIButton</string>
